fix : dropdown would overflow when near page bounds

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -59,7 +59,7 @@ form {
 }
 
 .dropdown.flip {
-  transform: translateX(-110%) scaleX(-1);
+  transform: scaleX(-1);
 
   h1,
   h3 {
